--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,3 +54,4 @@ endfunction()
 
 # Utility tests
 add_secutility_test(CachedFunctionTest CachedFunctionTest.cpp)
+add_secutility_test(RandomTest RandomTest.cpp)
