Export `SEC_IF_CONSTEVAL` and `SEC_IF_NOT_CONSTEVAL`

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -56,3 +56,4 @@ endfunction()
 add_secutility_test(CachedFunctionTest CachedFunctionTest.cpp)
 add_secutility_test(RandomTest RandomTest.cpp)
 add_secutility_test(ChecksumTest ChecksumTest.cpp)
+add_secutility_test(MacroTest MacroTest.cpp)
