Export stopwatch classes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,3 +57,4 @@ add_secutility_test(CachedFunctionTest CachedFunctionTest.cpp)
 add_secutility_test(RandomTest RandomTest.cpp)
 add_secutility_test(ChecksumTest ChecksumTest.cpp)
 add_secutility_test(MacroTest MacroTest.cpp)
+add_secutility_test(StopwatchTest StopwatchTest.cpp)
