--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,3 +58,4 @@ add_secutility_test(RandomTest RandomTest.cpp)
 add_secutility_test(ChecksumTest ChecksumTest.cpp)
 add_secutility_test(MacroTest MacroTest.cpp)
 add_secutility_test(StopwatchTest StopwatchTest.cpp)
+add_secutility_test(StaticForeachTest StaticForeachTest.cpp)
