--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,3 +60,4 @@ add_secutility_test(MacroTest MacroTest.cpp)
 add_secutility_test(StopwatchTest StopwatchTest.cpp)
 add_secutility_test(StaticForeachTest StaticForeachTest.cpp)
 add_secutility_test(ThreadPoolTest ThreadPoolTest.cpp)
+add_secutility_test(ExceptionTest ExceptionTest.cpp)
